crates/taint/src/snapshots/taint__tests__global_postfix.snap
---
source: crates/taint/src/lib.rs
expression: metrics
---
  Assignments: 1/2 (50.0% cross-shader)
  CF Branches: 0/0 (0.0% cross-shader)
