crates/taint/src/snapshots/taint__tests__only_rhs.snap
---
source: crates/taint/src/lib.rs
expression: metrics
---
  Assignments: 0/2 (0.0% cross-shader)
  CF Branches: 0/0 (0.0% cross-shader)
