crates/taint/src/snapshots/taint__tests__simple_assignment.snap
---
source: crates/taint/src/lib.rs
expression: metrics
---
  Assignments: 2/3 (66.7% cross-shader)
  CF Branches: 0/0 (0.0% cross-shader)
