crates/taint/src/snapshots/taint__tests__simple_cf.snap
---
source: crates/taint/src/lib.rs
expression: metrics
---
  Assignments: 1/2 (50.0% cross-shader)
  CF Branches: 1/1 (100.0% cross-shader)
